<resources>
    <string name="app_name">TrailBlazeLearn</string>
    <string name="facebook_app_id">745081585696907</string>
    <string name="fb_login_protocol_scheme">fb745081585696907</string>


    <string name="nameview">Name</string>
    <string name="LogoutBtn">Logout</string>
    <string name="TrainerBtn">Trainer</string>
    <string name="Participantbtn">Participant</string>
    <string name="title_activity_trail">TrailActivity</string>
    <string name="add_trails_to_appear_here">add to appear here</string>
    <string name="placeholder">Placeholder</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="trail_name_validation_ms">Please fill in trail name</string>
    <string name="module_validation_ms">Please fill in module</string>
    <string name="date_validation_ms">Please select the date</string>
    <string name="code_validation_ms">Please fill in trail code</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="module">Module</string>
    <string name="trail_name">Trail Name</string>
    <string name="trail_code">Trail Code</string>
    <string name="station_name">Station Name</string>
    <string name="station_name_validation_ms">Please fill in station name</string>
    <string name="seq_num_validation_ms">Please fill in sequence number</string>
    <string name="location_validation_ms">Please fill in location</string>
    <string name="instruction_validation_ms">Please fill in instructions</string>

    //Welcome Activity
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="enter_the_trail_id">Enter the Trail Id</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
