<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTrailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">


            <TextView
                android:id="@+id/trailname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/trail_name" />

            <EditText
                android:id="@+id/et_trail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/trailname"
                android:hint="@string/trail_name"
                android:inputType="" />

            <TextView
                android:id="@+id/mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/et_trail_name"
                android:text="@string/module"

                />

            <EditText
                android:id="@+id/et_module"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/mod"
                android:hint="@string/module"
                android:inputType="" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/et_module"
                android:text="@string/date"

                />
            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/date"
                android:hint="@string/date"
                android:focusable="false"
                android:clickable="true"
                android:inputType="" />



        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_orange_light"
        android:text="@string/save"
        android:textColor="@android:color/white" />


</RelativeLayout>